implement beginning_year_isi field

--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -100,40 +100,40 @@ pub_date_i = custom, getPubDateSliderVals
 # Publication dates (31 flavors!  Baskin-Robbins)
 # from 008 date 1
 date_1_008_raw_ssim = 008[7-10]
-#beginning_year_tisim = custom, get008BeginningYear
-#earliest_year_tisim = custom, get008EarliestYear
-#earliest_poss_year_tisim = custom, get008EarliestPossibleYear
-#publication_year_tisim = custom, get008PublicationYear
-#release_year_tisim = custom, get008ReleaseYear
-#reprint_year_tisim = custom, get008ReprintYear
+beginning_year_isi = custom, get008BeginningYear
+#earliest_year_isi = custom, get008EarliestYear
+#earliest_poss_year_isi = custom, get008EarliestPossibleYear
+#publication_year_isi = custom, get008PublicationYear
+#release_year_isi = custom, get008ReleaseYear
+#reprint_year_isi = custom, get008ReprintYear
 # from 008 date 2
 date_2_008_raw_ssim = 008[11-14]
-#ending_year_tisim = custom, get008EndingYear
-#latest_year_tisim = custom, get008LatestYear
-#latest_poss_year_tisim = custom, get008LatestPossibleYear
-#production_year_tisim = custom, get008ProductionYear
-#orig_year_tisim = custom, get008OriginalYear
-#copyright_year_tisim = custom, get008CopyrightYear
+#ending_year_isi = custom, get008EndingYear
+#latest_year_isi = custom, get008LatestYear
+#latest_poss_year_isi = custom, get008LatestPossibleYear
+#production_year_isi = custom, get008ProductionYear
+#orig_year_isi = custom, get008OriginalYear
+#copyright_year_isi = custom, get008CopyrightYear
 # from 260c
 #date_260c_raw_ssim = 260c
-#imprint_year_tisim = custom, getImprintYear
+#imprint_year_isi = custom, getImprintYear
 # from 264c, based on indicators
 #date_264c_raw_ssim = 264c
-#prod_year_tisim = custom, getProductionYear
-#current_prod_year_tisim = custom, getCurrentProductionYear
-#former_prod_year_tisim = custom, getFormerProductionYear
-#pub_year_tisim = custom, getPublicationYear
-#current_pub_year_tisim = custom, getCurrentPublicationYear
-#former_pub_year_tisim = custom, getFormerPublicationYear
-#dist_year_tisim = custom, getDistributionYear
-#current_dist_year_tisim = custom, getCurrentDistributionYear
-#former_dist_year_tisim = custom, getFormerDistributionYear
-#manu_year_tisim = custom, getManufactureYear
-#current_manu_year_tisim = custom, getCurrentManufactureYear
-#former_manu_year_tisim = custom, getFormerManufactureYear
-#copy_year_tisim = custom, getCopyrightYear
-#current_copy_year_tisim = custom, getCurrentCopyrightYear
-#former_copy_year_tisim = custom, getFormerCopyrightYear
+#prod_year_isim = custom, getProductionYear
+#current_prod_year_isim = custom, getCurrentProductionYear
+#former_prod_year_isim = custom, getFormerProductionYear
+#pub_year_isim = custom, getPublicationYear
+#current_pub_year_isim = custom, getCurrentPublicationYear
+#former_pub_year_isim = custom, getFormerPublicationYear
+#dist_year_isim = custom, getDistributionYear
+#current_dist_year_isim = custom, getCurrentDistributionYear
+#former_dist_year_isim = custom, getFormerDistributionYear
+#manu_year_isim = custom, getManufactureYear
+#current_manu_year_isim = custom, getCurrentManufactureYear
+#former_manu_year_isim = custom, getFormerManufactureYear
+#copy_year_isim = custom, getCopyrightYear
+#current_copy_year_isim = custom, getCurrentCopyrightYear
+#former_copy_year_isim = custom, getFormerCopyrightYear
 
 language = custom, getLanguages, language_map.properties
 format = custom, getFormats
