--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -101,7 +101,7 @@ pub_date_i = custom, getPubDateSliderVals
 # from 008 date 1
 date_1_008_raw_ssim = 008[7-10]
 beginning_year_isi = custom, get008BeginningYear
-#earliest_year_isi = custom, get008EarliestYear
+earliest_year_isi = custom, get008EarliestYear
 #earliest_poss_year_isi = custom, get008EarliestPossibleYear
 #publication_year_isi = custom, get008PublicationYear
 #release_year_isi = custom, get008ReleaseYear
