refactor beginning_year_isi and earliest_year_isi fields to use common method

--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -100,8 +100,8 @@ pub_date_i = custom, getPubDateSliderVals
 # Publication dates (31 flavors!  Baskin-Robbins)
 # from 008 date 1
 date_1_008_raw_ssim = 008[7-10]
-beginning_year_isi = custom, get008BeginningYear
-earliest_year_isi = custom, get008EarliestYear
+beginning_year_isi = custom, get008Date1(cdmu)
+earliest_year_isi = custom, get008Date1(ik)
 #earliest_poss_year_isi = custom, get008EarliestPossibleYear
 #publication_year_isi = custom, get008PublicationYear
 #release_year_isi = custom, get008ReleaseYear
