--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -102,7 +102,7 @@ pub_date_i = custom, getPubDateSliderVals
 date_1_008_raw_ssim = 008[7-10]
 beginning_year_isi = custom, get008Date1(cdmu)
 earliest_year_isi = custom, get008Date1(ik)
-#earliest_poss_year_isi = custom, get008EarliestPossibleYear
+earliest_poss_year_isi = custom, get008Date1(q)
 #publication_year_isi = custom, get008PublicationYear
 #release_year_isi = custom, get008ReleaseYear
 #reprint_year_isi = custom, get008ReprintYear
