implement release_year_isi field

--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -104,7 +104,7 @@ beginning_year_isi = custom, get008Date1(cdmu)
 earliest_year_isi = custom, get008Date1(ik)
 earliest_poss_year_isi = custom, get008Date1(q)
 #publication_year_isi = custom, get008PublicationYear
-#release_year_isi = custom, get008ReleaseYear
+release_year_isi = custom, get008Date1(p)
 #reprint_year_isi = custom, get008ReprintYear
 # from 008 date 2
 date_2_008_raw_ssim = 008[11-14]
