implement reprint_year_isi field

--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -105,7 +105,7 @@ earliest_year_isi = custom, get008Date1(ik)
 earliest_poss_year_isi = custom, get008Date1(q)
 #publication_year_isi = custom, get008PublicationYear
 release_year_isi = custom, get008Date1(p)
-#reprint_year_isi = custom, get008ReprintYear
+reprint_year_isi = custom, get008Date1(r)
 # from 008 date 2
 date_2_008_raw_ssim = 008[11-14]
 #ending_year_isi = custom, get008EndingYear
