--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -103,7 +103,7 @@ date_1_008_raw_ssim = 008[7-10]
 beginning_year_isi = custom, get008Date1(cdmu)
 earliest_year_isi = custom, get008Date1(ik)
 earliest_poss_year_isi = custom, get008Date1(q)
-#publication_year_isi = custom, get008PublicationYear
+publication_year_isi = custom, get008Date1(est)
 release_year_isi = custom, get008Date1(p)
 reprint_year_isi = custom, get008Date1(r)
 # from 008 date 2
