--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -109,7 +109,7 @@ reprint_year_isi = custom, get008Date1(r)
 # from 008 date 2
 date_2_008_raw_ssim = 008[11-14]
 ending_year_isi = custom, get008Date2(dm)
-#latest_year_isi = custom, get008LatestYear
+latest_year_isi = custom, get008Date2(ik)
 #latest_poss_year_isi = custom, get008LatestPossibleYear
 #production_year_isi = custom, get008ProductionYear
 #orig_year_isi = custom, get008OriginalYear
