implement latest_poss_year_isi field

--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -110,7 +110,7 @@ reprint_year_isi = custom, get008Date1(r)
 date_2_008_raw_ssim = 008[11-14]
 ending_year_isi = custom, get008Date2(dm)
 latest_year_isi = custom, get008Date2(ik)
-#latest_poss_year_isi = custom, get008LatestPossibleYear
+latest_poss_year_isi = custom, get008Date2(q)
 #production_year_isi = custom, get008ProductionYear
 #orig_year_isi = custom, get008OriginalYear
 #copyright_year_isi = custom, get008CopyrightYear
