--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -100,10 +100,10 @@ pub_date_i = custom, getPubDateSliderVals
 # Publication dates (31 flavors!  Baskin-Robbins)
 # from 008 date 1
 date_1_008_raw_ssim = 008[7-10]
+publication_year_isi = custom, get008Date1(est)
 beginning_year_isi = custom, get008Date1(cdmu)
 earliest_year_isi = custom, get008Date1(ik)
 earliest_poss_year_isi = custom, get008Date1(q)
-publication_year_isi = custom, get008Date1(est)
 release_year_isi = custom, get008Date1(p)
 reprint_year_isi = custom, get008Date1(r)
 # from 008 date 2
@@ -111,7 +111,7 @@ date_2_008_raw_ssim = 008[11-14]
 ending_year_isi = custom, get008Date2(dm)
 latest_year_isi = custom, get008Date2(ik)
 latest_poss_year_isi = custom, get008Date2(q)
-#production_year_isi = custom, get008ProductionYear
+production_year_isi = custom, get008Date2(p)
 #orig_year_isi = custom, get008OriginalYear
 #copyright_year_isi = custom, get008CopyrightYear
 # from 260c
