implement original_year_isi field

--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -112,7 +112,7 @@ ending_year_isi = custom, get008Date2(dm)
 latest_year_isi = custom, get008Date2(ik)
 latest_poss_year_isi = custom, get008Date2(q)
 production_year_isi = custom, get008Date2(p)
-#orig_year_isi = custom, get008OriginalYear
+original_year_isi = custom, get008Date2(r)
 #copyright_year_isi = custom, get008CopyrightYear
 # from 260c
 #date_260c_raw_ssim = 260c
