implement copyright_year_isi field

--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -113,7 +113,7 @@ latest_year_isi = custom, get008Date2(ik)
 latest_poss_year_isi = custom, get008Date2(q)
 production_year_isi = custom, get008Date2(p)
 original_year_isi = custom, get008Date2(r)
-#copyright_year_isi = custom, get008CopyrightYear
+copyright_year_isi = custom, get008Date2(t)
 # from 260c
 #date_260c_raw_ssim = 260c
 #imprint_year_isi = custom, getImprintYear
