--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -94,8 +94,7 @@ pub_country = 008[15-17]:008[15-16], country_map.properties, first
 pub_date = custom, getPubDate
 pub_date_group_facet = custom, getPubDateGroups
 pub_date_sort = custom, getPubDateSort
-#date_slider_year_tisim = custom, getPubDateSliderVals
-pub_date_i = custom, getPubDateSliderVals
+pub_year_tisim = custom, getPubDateSliderVals
 
 # Publication dates (31 flavors!  Baskin-Robbins)
 # from 008 date 1
