index 264c and 260c raw values

--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -95,7 +95,6 @@ pub_date = custom, getPubDate
 pub_date_group_facet = custom, getPubDateGroups
 pub_date_sort = custom, getPubDateSort
 pub_year_tisim = custom, getPubDateSliderVals
-
 # Publication dates (31 flavors!  Baskin-Robbins)
 # from 008 date 1
 date_1_008_raw_ssim = 008[7-10]
@@ -114,10 +113,10 @@ production_year_isi = custom, get008Date2(p)
 original_year_isi = custom, get008Date2(r)
 copyright_year_isi = custom, get008Date2(t)
 # from 260c
-#date_260c_raw_ssim = 260c
+date_260c_raw_ssim = 260c
 #imprint_year_isi = custom, getImprintYear
 # from 264c, based on indicators
-#date_264c_raw_ssim = 264c
+date_264c_raw_ssim = 264c
 #prod_year_isim = custom, getProductionYear
 #current_prod_year_isim = custom, getCurrentProductionYear
 #former_prod_year_isim = custom, getFormerProductionYear
