implement imprint_year_isim and a little refactoring of PublicationTests

--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -114,7 +114,7 @@ original_year_isi = custom, get008Date2(r)
 copyright_year_isi = custom, get008Date2(t)
 # from 260c
 date_260c_raw_ssim = 260c
-#imprint_year_isi = custom, getImprintYear
+imprint_year_isim = custom, getImprintYear
 # from 264c, based on indicators
 date_264c_raw_ssim = 264c
 #prod_year_isim = custom, getProductionYear
