temporarily use new, simpler date slider algorithm from 008 only

--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -90,12 +90,11 @@ era_facet = custom, removeTrailingPunct(650y:651y, [\\\\,;], ([A-Za-z0-9]{2}) )
 pub_search = custom, getPublication
 vern_pub_search = custom, getLinkedField(260ab:264ab)
 pub_country = 008[15-17]:008[15-16], country_map.properties, first
-
+# publication dates
 pub_date = custom, getPubDate
 pub_date_group_facet = custom, getPubDateGroups
 pub_date_sort = custom, getPubDateSort
 pub_year_tisim = custom, getPubDateSliderVals
-# Publication dates (31 flavors!  Baskin-Robbins)
 # from 008 date 1
 date_1_008_raw_ssim = 008[7-10]
 publication_year_isi = custom, get008Date1(est)
