raw 008 dates are single valued

--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -96,7 +96,7 @@ pub_date_group_facet = custom, getPubDateGroups
 pub_date_sort = custom, getPubDateSort
 pub_year_tisim = custom, getPubDateSliderVals
 # from 008 date 1
-date_1_008_raw_ssim = 008[7-10]
+date_1_008_raw_ssi = 008[7-10]
 publication_year_isi = custom, get008Date1(est)
 beginning_year_isi = custom, get008Date1(cdmu)
 earliest_year_isi = custom, get008Date1(ik)
@@ -104,7 +104,7 @@ earliest_poss_year_isi = custom, get008Date1(q)
 release_year_isi = custom, get008Date1(p)
 reprint_year_isi = custom, get008Date1(r)
 # from 008 date 2
-date_2_008_raw_ssim = 008[11-14]
+date_2_008_raw_ssi = 008[11-14]
 ending_year_isi = custom, get008Date2(dm)
 latest_year_isi = custom, get008Date2(ik)
 latest_poss_year_isi = custom, get008Date2(q)
