other_year_isi field coded and tested

--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -103,6 +103,7 @@ earliest_year_isi = custom, get008Date1(ik)
 earliest_poss_year_isi = custom, get008Date1(q)
 release_year_isi = custom, get008Date1(p)
 reprint_year_isi = custom, get008Date1(r)
+other_year_isi = custom, getOtherYear
 # from 008 date 2
 date_2_008_raw_ssi = 008[11-14]
 ending_year_isi = custom, get008Date2(dm)
@@ -113,7 +114,11 @@ original_year_isi = custom, get008Date2(r)
 copyright_year_isi = custom, get008Date2(t)
 # from 260c
 date_260c_raw_ssim = 260c
-imprint_year_isim = custom, getImprintYear
+#  the below was for testing only
+#imprint_year_isim = custom, getImprintYear
+# these need to use 250 and 260
+#imprint_display = 260[a-g]
+#vern_imprint_display = custom, getLinkedField(260[a-g])
 # from 264c, based on indicators
 date_264c_raw_ssim = 264c
 #prod_year_isim = custom, getProductionYear
