--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -117,8 +117,8 @@ date_260c_raw_ssim = 260c
 #  the below was for testing only
 #imprint_year_isim = custom, getImprintYear
 # these need to use 250 and 260
-#imprint_display = 260[a-g]
-#vern_imprint_display = custom, getLinkedField(260[a-g])
+imprint_display = custom, getImprint
+#vern_imprint_display = custom, getVernImprint
 # from 264c, based on indicators
 date_264c_raw_ssim = 264c
 #prod_year_isim = custom, getProductionYear
