--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -91,11 +91,14 @@ pub_search = custom, getPublication
 vern_pub_search = custom, getLinkedField(260ab:264ab)
 pub_country = 008[15-17]:008[15-16], country_map.properties, first
 # publication dates
+# deprecated
 pub_date = custom, getPubDate
+# deprecated
 pub_date_group_facet = custom, getPubDateGroups
 pub_date_sort = custom, getPubDateSort
 pub_year_tisim = custom, getPubDateSliderVals
 # from 008 date 1
+# for debugging date slider
 date_1_008_raw_ssi = 008[7-10]
 publication_year_isi = custom, get008Date1(est)
 beginning_year_isi = custom, get008Date1(cdmu)
@@ -105,6 +108,7 @@ release_year_isi = custom, get008Date1(p)
 reprint_year_isi = custom, get008Date1(r)
 other_year_isi = custom, getOtherYear
 # from 008 date 2
+# for debugging date slider
 date_2_008_raw_ssi = 008[11-14]
 ending_year_isi = custom, get008Date2(dm)
 latest_year_isi = custom, get008Date2(ik)
@@ -113,28 +117,12 @@ production_year_isi = custom, get008Date2(p)
 original_year_isi = custom, get008Date2(r)
 copyright_year_isi = custom, get008Date2(t)
 # from 260c
+# for debugging date slider
 date_260c_raw_ssim = 260c
-#  the below was for testing only
-#imprint_year_isim = custom, getImprintYear
-# these need to use 250 and 260
 imprint_display = custom, getImprint
 # from 264c, based on indicators
+# for debugging date slider
 date_264c_raw_ssim = 264c
-#prod_year_isim = custom, getProductionYear
-#current_prod_year_isim = custom, getCurrentProductionYear
-#former_prod_year_isim = custom, getFormerProductionYear
-#pub_year_isim = custom, getPublicationYear
-#current_pub_year_isim = custom, getCurrentPublicationYear
-#former_pub_year_isim = custom, getFormerPublicationYear
-#dist_year_isim = custom, getDistributionYear
-#current_dist_year_isim = custom, getCurrentDistributionYear
-#former_dist_year_isim = custom, getFormerDistributionYear
-#manu_year_isim = custom, getManufactureYear
-#current_manu_year_isim = custom, getCurrentManufactureYear
-#former_manu_year_isim = custom, getFormerManufactureYear
-#copy_year_isim = custom, getCopyrightYear
-#current_copy_year_isim = custom, getCurrentCopyrightYear
-#former_copy_year_isim = custom, getFormerCopyrightYear
 
 language = custom, getLanguages, language_map.properties
 format = custom, getFormats
