add BIO-TeMP and MATH-TEMP locations

--- a/stanford-sw/translation_maps/location_map.properties
+++ b/stanford-sw/translation_maps/location_map.properties
@@ -44,6 +44,7 @@ BILLED-OD = Overdue
 BINDERY = At bindery
 BIO-LOAN = Biology (Falconer) Loan Desk
 BIO-RESV = On Reserve at FALCONER Library
+BIO-TEMP = See loan desk for access
 BOX-COLL = Box Collection
 BRAN-RESV = On Reserve at BRANNER Library
 BRIT-DOCS = British Government Documents
@@ -212,6 +213,7 @@ MAP-REF = Reference Maps
 MAPS = Maps
 MAP-STOR = Map Storage: Ask at loan desk
 MATH-RESV = On Reserve at MATH/CS Library
+MATH-TEMP = See loan desk for access
 MAT-LOAN = Mathematical & Computer Sciences Loan Desk
 MEDIA = Media
 MEDIA-30 = Media
