add vern_all_search field, per SW-813, to fix author-title searching in CJK vernacular

--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -3,9 +3,11 @@
 id = custom, getId
 #marc21 = FullRecordAsMARC
 marcxml = FullRecordAsXML
-all_search = custom, getAllFields
 collection = "sirsi"
 display_type = "sirsi"
+
+all_search = custom, getAllFields
+vern_all_search = custom, getAllLinkedSearchableFields
 
 # Title Search Fields
 title_245a_search = 245a
