--- a/profiling/prof_config.properties
+++ b/profiling/prof_config.properties
@@ -1,4 +1,4 @@
-# Properties for stanford-sw (Stanford SearchWorks) SolrMarc java code
+# Properties for profiling (Stanford Marc Profiling) SolrMarc java code
 
 # --- your site's basic configuration properties -------------------------------
 #  for more documentation, see
@@ -12,11 +12,11 @@ solrmarc.solr.war.path=${site.solr.war.path}
 
 # - solrmarc.indexing.properties -indicates how to populate Solr index fields from
 #   marc data.  This is the central configuration file for solrmarc.
-solrmarc.indexing.properties = sw_index.properties
+solrmarc.indexing.properties = prof_index.properties
 
 # - solrmarc.indexing.class - full name of java class with custom indexing functions. This
 #   class must extend SolrIndexer; Defaults to SolrIndexer.
-solrmarc.indexing.class = edu.stanford.StanfordIndexer
+solrmarc.indexing.class = edu.stanford.ProfilingIndexer
 
 # - marc.permissive - if true, try to recover from errors, including records
 #  with errors, when possible
