updates to prof_index.properties

--- a/profiling/prof_index.properties
+++ b/profiling/prof_index.properties
@@ -16,9 +16,11 @@ marcxml = FullRecordAsXML
 
 format = custom, getFormats
 building = custom, getBuildings, library_map.properties
-
+language = custom, getLanguages, language_map.properties
 lc_alpha_facet = custom, getLCCallNumCats, callnumber_map.properties
 lc_b4cutter_facet = custom, getLCCallNumsB4Cutter
+pub_year_tisim = custom, getPubDateSliderVals
+
 
 leader_byte_06_si = leader[06]
 
@@ -36,6 +38,7 @@ f007_00_sim = 007[0]
 f007_01_sim = 007[1]
 f007_03_sim = 007[3]
 f007_06_sim = 007[6]
+f007_09_sim = 007[9]
 
 f008_06_si = 008[6]
 f008_07-10_si = 008[7-10]
@@ -70,7 +73,6 @@ f047_si = custom, getAllAlphaSubfields(047)
 f048_sim = custom, getAllAlphaSubfields(048)
 f050_sim = custom, getAllAlphaSubfields(050)
 
-# split for scores and recordings
 f100_si = custom, getAllAlphaSubfields(100)
 f100e_si = 100e
 f100f_si = 100f
@@ -87,15 +89,17 @@ f130h_si = 130h
 f130l_si = 130l
 f130m_si = 130m
 f130n_si = 130n
+f130o_si = 130o
 f130r_si = 130r
 
 f240f_si = 240f
 f240l_si = 240l
 f240m_si = 240m
 f240n_si = 240n
+f240o_si = 240o
 f240r_si = 240r
-f245_si = custom, getAllAlphaSubfields(245)
-f245a_si = 245a
+f245_ssi = custom, getAllAlphaSubfields(245)
+f245a_ssi = 245a
 f245c_si = 245c
 f245h_si = 245h
 f250_sim = custom, getAllAlphaSubfields(250)
@@ -115,10 +119,8 @@ f300a_sim = 300a
 f300ae_sim = 300ae
 f300b_sim = 300b
 f300bc_sim = 300bc
+f300c_sim = 300c
 f340_sim = custom, getAllAlphaSubfields(340)
-f341_sim = custom, getAllAlphaSubfields(341)
-f342_sim = custom, getAllAlphaSubfields(342)
-f343_sim = custom, getAllAlphaSubfields(343)
 f344_sim = custom, getAllAlphaSubfields(344)
 f344a_sim = 344a
 f345_sim = custom, getAllAlphaSubfields(345)
@@ -132,7 +134,6 @@ f380_sim = custom, getAllAlphaSubfields(380)
 f381_sim = custom, getAllAlphaSubfields(381)
 f382_sim = custom, getAllAlphaSubfields(382)
 f383_sim = custom, getAllAlphaSubfields(383)
-f383abcde_sim = 383abcde
 f384_si = custom, getAllAlphaSubfields(384)
 f385_sim = custom, getAllAlphaSubfields(385)
 f386_sim = custom, getAllAlphaSubfields(386)
@@ -142,13 +143,11 @@ f389_sim = custom, getAllAlphaSubfields(389)
 
 f502d_sim = 502d
 f505a_sim = 505a
-f505r_sim = 505r
 f505t_sim = 505t
 f508_sim = custom, getAllAlphaSubfields(508)
 f511_sim = custom, getAllAlphaSubfields(511)
-f518ad_sim = 518ad
-f518ap_sim = 518ap
-f534c_sim = 534c
+f518_sim = custom, getAllAlphaSubfields(518)
+f534_sim = custom, getAllAlphaSubfields(534)
 f546_sim = custom, getAllAlphaSubfields(546)
 f546a_sim = 546a
 f546b_sim = 546b
@@ -164,18 +163,25 @@ f655_sim = custom, getAllAlphaSubfields(655)
 
 f700abcdejq_sim = 700abcdejq
 f700klmnoprst_sim = 700klmnoprst
+f700e_sim = 700e
 f700f_sim = 700f
 f700h_sim = 700h
 f700l_sim = 700l
 f700m_sim = 700m
 f700n_sim = 700n
+f700o_sim = 700o
+f700p_sim = 700p
 f700r_sim = 700r
-f710abcdgn_sim = 710abcdgn
+f710abcdegn_sim = 710abcdegn
 f710klmnoprst_sim = 710klmnoprst
+f710e_sim = 710e
 f710f_sim = 710f
 f710h_sim = 710h
 f710l_sim = 710l
 f710m_sim = 710m
+f710n_sim = 710n
+f710o_sim = 710o
+f710p_sim = 710p
 f710r_sim = 710r
 f711acdefgnpqu_sim = 711acdefgnpqu
 f711klnpst_sim = 711klnpst
@@ -188,6 +194,8 @@ f730f_sim = 730f
 f730l_sim = 730l
 f730m_sim = 730m
 f730n_sim = 730n
+f730o_sim = 730o
+f730p_sim = 730p
 f730r_sim = 730r
 f740_sim = custom, getAllAlphaSubfields(740)
 
