reset solrmarc.indexing.class name to StanfordIndexer in config.props

--- a/profiling/prof_config.properties
+++ b/profiling/prof_config.properties
@@ -16,7 +16,7 @@ solrmarc.indexing.properties = prof_index.properties
 
 # - solrmarc.indexing.class - full name of java class with custom indexing functions. This
 #   class must extend SolrIndexer; Defaults to SolrIndexer.
-solrmarc.indexing.class = edu.stanford.ProfilingIndexer
+solrmarc.indexing.class = edu.stanford.StanfordIndexer
 
 # - marc.permissive - if true, try to recover from errors, including records
 #  with errors, when possible
