tweaking prof_indexing.props

--- a/profiling/prof_index.properties
+++ b/profiling/prof_index.properties
@@ -9,7 +9,6 @@
 
 id = custom, getId
 collection = "music"
-marcxml = FullRecordAsXML
 
 # for all Music records, as determined by 
 #   call number?
@@ -19,7 +18,7 @@ building = custom, getBuildings, library_map.properties
 language = custom, getLanguages, language_map.properties
 lc_alpha_facet = custom, getLCCallNumCats, callnumber_map.properties
 lc_b4cutter_facet = custom, getLCCallNumsB4Cutter
-pub_year_tisim = custom, getPubDateSliderVals
+pub_year_itsim = custom, getPubDateSliderVals
 
 
 leader_byte_06_si = leader[06]
