working on getMusicRecords method to select only those records we're interested in profiling for music

--- a/profiling/prof_index.properties
+++ b/profiling/prof_index.properties
@@ -8,7 +8,7 @@
 #   
 
 id = custom, getId
-collection = "music"
+collection = customDeleteRecordIfFieldEmpty, getMusicRecords
 
 # for all Music records, as determined by 
 #   call number?
