clean up index.properties file

--- a/profiling/prof_index.properties
+++ b/profiling/prof_index.properties
@@ -1,17 +1,7 @@
-# Stanford mappings from MARC data to Solr fields
-
-# select:
-#   format: Music - Score
-#   format: Music - Recording
-#   format: Sound Recording ?
-#   Book, Thesis, Conf proceedings  with M call number
-#   
+# Music profiling mappings from MARC data to Solr fields
 
 id = custom, getId
 collection = customDeleteRecordIfFieldEmpty, getMusicRecords
-
-# for all Music records, as determined by 
-#   call number?
 
 format = custom, getFormats
 building = custom, getBuildings, library_map.properties
@@ -19,7 +9,6 @@ language = custom, getLanguages, language_map.properties
 lc_alpha_facet = custom, getLCCallNumCats, callnumber_map.properties
 lc_b4cutter_facet = custom, getLCCallNumsB4Cutter
 pub_year_itsim = custom, getPubDateSliderVals
-
 
 leader_byte_06_si = leader[06]
 
