updating scripts for music-profiling

--- a/build.properties
+++ b/build.properties
@@ -113,7 +113,7 @@ site.lib.dir = ${site.basedir}
 site.log4j.props = ${site.basedir}/log4j.properties
 site.scripts.dir = ${site.basedir}/scripts
 
-site.config.file.name = sw_config.properties
+site.config.file.name = prof_config.properties
 site.config.file = ${site.basedir}/${site.config.file.name}
 
 # FIXME:  drop "use"
