some non-repeatable fields have repeatable subfields

--- a/profiling/prof_index.properties
+++ b/profiling/prof_index.properties
@@ -57,33 +57,33 @@ f046_sim = custom, getAllAlphaSubfields(046)
 f046k_sim = 046k
 f046l_sim = 046l
 f046kl_sim = 046kl
-f047_si = custom, getAllAlphaSubfields(047)
+f047_sim = custom, getAllAlphaSubfields(047)
 f048_sim = custom, getAllAlphaSubfields(048)
 f050_sim = custom, getAllAlphaSubfields(050)
 
 f100_si = custom, getAllAlphaSubfields(100)
-f100e_si = 100e
+f100e_sim = 100e
 f100f_si = 100f
 f110_si = custom, getAllAlphaSubfields(110)
-f110e_si = 110e
+f110e_sim = 110e
 f110f_si = 110f
 f111_si = custom, getAllAlphaSubfields(111)
 f111d_si = 111d
-f111e_si = 111e
+f111e_sim = 111e
 f111f_si = 111f
 f130_si = custom, getAllAlphaSubfields(130)
 f130f_si = 130f
 f130h_si = 130h
 f130l_si = 130l
-f130m_si = 130m
-f130n_si = 130n
+f130m_sim = 130m
+f130n_sim = 130n
 f130o_si = 130o
 f130r_si = 130r
 
 f240f_si = 240f
 f240l_si = 240l
-f240m_si = 240m
-f240n_si = 240n
+f240m_sim = 240m
+f240n_sim = 240n
 f240o_si = 240o
 f240r_si = 240r
 f245_ssi = custom, getAllAlphaSubfields(245)
