fix leaderByte06 population

--- a/profiling/prof_index.properties
+++ b/profiling/prof_index.properties
@@ -10,7 +10,7 @@ lc_alpha_facet = custom, getLCCallNumCats, callnumber_map.properties
 lc_b4cutter_facet = custom, getLCCallNumsB4Cutter
 pub_year_itsim = custom, getPubDateSliderVals
 
-leader_byte_06_si = leader[06]
+leader_byte_06_si = 000[06]
 
 f006_sim = 006
 f006_00_sim = 006[0]
