added more music fields, including a method to split out 024 according to first indicator

--- a/profiling/prof_index.properties
+++ b/profiling/prof_index.properties
@@ -43,14 +43,32 @@ f008_35-37_si = 008[35-37]
 
 f020a_sim = 020a
 f020z_sim = 020z
-f024a_sim = 024a
-f024z_sim = 024z
+f024_0a_sim = custom, get024(0, a)
+f024_0z_sim = custom, get024(0, z)
+f024_1a_sim = custom, get024(1, a)
+f024_1z_sim = custom, get024(1, z)
+f024_2a_sim = custom, get024(2, a)
+f024_2z_sim = custom, get024(2, z)
+f024_3a_sim = custom, get024(3, a)
+f024_3z_sim = custom, get024(3, z)
+f024_4a_sim = custom, get024(4, a)
+f024_4z_sim = custom, get024(4, z)
+f024_5a_sim = custom, get024(5, a)
+f024_5z_sim = custom, get024(5, z)
+f024_6a_sim = custom, get024(6, a)
+f024_6z_sim = custom, get024(6, z)
+f024_7a_sim = custom, get024(7, a)
+f024_7z_sim = custom, get024(7, z)
+f024_8a_sim = custom, get024(8, a)
+f024_8z_sim = custom, get024(8, z)
 f028a_sim = 028a
 f028b_sim = 028b
 f031r_sim = 031r
 f033a_sim = 033a
 f033bc_sim = 033bc
 f041_sim = custom, getAllAlphaSubfields(041)
+f041a_sim = 041a
+f041d_sim = 041d
 f043_si = custom, getAllAlphaSubfields(043)
 f045_si = custom, getAllAlphaSubfields(045)
 f046_sim = custom, getAllAlphaSubfields(046)
@@ -62,12 +80,15 @@ f048_sim = custom, getAllAlphaSubfields(048)
 f050_sim = custom, getAllAlphaSubfields(050)
 
 f100_si = custom, getAllAlphaSubfields(100)
+f1004_sim = 1004
 f100e_sim = 100e
 f100f_si = 100f
 f110_si = custom, getAllAlphaSubfields(110)
+f1104_sim = 1104
 f110e_sim = 110e
 f110f_si = 110f
 f111_si = custom, getAllAlphaSubfields(111)
+f1114_sim = 1114
 f111d_si = 111d
 f111e_sim = 111e
 f111f_si = 111f
@@ -145,12 +166,14 @@ f610abcdgnu_sim = 610abcdgnu
 f611acdefgnpqu_sim = 611acdefgnpqu
 f650_sim = custom, getAllAlphaSubfields(650)
 f650v_sim = 650v
+f650x_sim = 650x
 f650y_sim = 650y
 f650z_sim = 650z
 f655_sim = custom, getAllAlphaSubfields(655)
 
 f700abcdejq_sim = 700abcdejq
 f700klmnoprst_sim = 700klmnoprst
+f7004_sim = 7004
 f700e_sim = 700e
 f700f_sim = 700f
 f700h_sim = 700h
@@ -162,6 +185,7 @@ f700p_sim = 700p
 f700r_sim = 700r
 f710abcdegn_sim = 710abcdegn
 f710klmnoprst_sim = 710klmnoprst
+f7104_sim = 7104
 f710e_sim = 710e
 f710f_sim = 710f
 f710h_sim = 710h
@@ -173,6 +197,7 @@ f710p_sim = 710p
 f710r_sim = 710r
 f711acdefgnpqu_sim = 711acdefgnpqu
 f711klnpst_sim = 711klnpst
+f7114_sim = 7114
 f711d_sim = 711d
 f711f_sim = 711f
 f711h_sim = 711h
