added f7xxi_sim to tests, properties, and solrconfig

--- a/profiling/prof_index.properties
+++ b/profiling/prof_index.properties
@@ -211,6 +211,7 @@ f730o_sim = 730o
 f730p_sim = 730p
 f730r_sim = 730r
 f740_sim = custom, getAllAlphaSubfields(740)
+f7xxi_sim = 700i:710i:711i:720i:730i:740i:751i:752i:753i:754i:760i:762i:765i:767i:770i:772i:773i:774i:775i:776i:777i:780i:785i:786i:787i
 
 f800abcdejq_sim = 800abcdejq
 f800klmnoprst_sim = 800klmnoprst
