change prof_index.properties for genre, language, and BCE dates only

--- a/profiling/prof_index.properties
+++ b/profiling/prof_index.properties
@@ -1,227 +1,28 @@
-# Music profiling mappings from MARC data to Solr fields
+# Marc profiling mappings from MARC data to Solr fields
 
 id = custom, getId
-collection = customDeleteRecordIfFieldEmpty, getMusicRecords
+collection = 'sirsi'
+all_search = custom, getAllFields
 
 format = custom, getFormats
-building = custom, getBuildings, library_map.properties
 language = custom, getLanguages, language_map.properties
-lc_alpha_facet = custom, getLCCallNumCats, callnumber_map.properties
-lc_b4cutter_facet = custom, getLCCallNumsB4Cutter
-pub_year_itsim = custom, getPubDateSliderVals
 
-leader_byte_06_si = 000[06]
+# genre
+f655_ssim = 655
+f655a_ssim = 655a
+f655b_ssim = 655b
+f655c_ssim = 655c
+f655abc_ssim = 655abc
 
-f006_sim = 006
-f006_00_sim = 006[0]
-f006_01-02_sim = 006[1-2]
-f006_03_sim = 006[3]
-f006_04_sim = 006[4]
-f006_06_sim =006[6]
-f006_13-14_sim = 006[13-14]
-f006_16_sim = 006[16]
+# BCE dates
+f046_ssim = 046
+f046a_ssim = 046a
+f046b_ssim = 046b 
+f046c_ssim = 046c 
+f046d_ssim = 046d 
+f046e_ssim = 046e 
 
-f007_sim = 007
-f007_00_sim = 007[0]
-f007_01_sim = 007[1]
-f007_03_sim = 007[3]
-f007_06_sim = 007[6]
-f007_09_sim = 007[9]
-
-f008_06_si = 008[6]
-f008_07-10_si = 008[7-10]
-f008_11-14_si = 008[11-14]
-f008_15-17_si = 008[15-17]
-f008_18-19_si = 008[18-19]
-f008_20_si = 008[20]
-f008_21_si = 008[21]
-f008_22_si = 008[22]
-f008_23_si = 008[23]
-f008_30-31_si = 008[30-31]
-f008_33_si = 008[33]
+# language
 f008_35-37_si = 008[35-37]
-
-f020a_sim = 020a
-f020z_sim = 020z
-f024_0a_sim = custom, get024(0, a)
-f024_0z_sim = custom, get024(0, z)
-f024_1a_sim = custom, get024(1, a)
-f024_1z_sim = custom, get024(1, z)
-f024_2a_sim = custom, get024(2, a)
-f024_2z_sim = custom, get024(2, z)
-f024_3a_sim = custom, get024(3, a)
-f024_3z_sim = custom, get024(3, z)
-f024_4a_sim = custom, get024(4, a)
-f024_4z_sim = custom, get024(4, z)
-f024_5a_sim = custom, get024(5, a)
-f024_5z_sim = custom, get024(5, z)
-f024_6a_sim = custom, get024(6, a)
-f024_6z_sim = custom, get024(6, z)
-f024_7a_sim = custom, get024(7, a)
-f024_7z_sim = custom, get024(7, z)
-f024_8a_sim = custom, get024(8, a)
-f024_8z_sim = custom, get024(8, z)
-f028a_sim = 028a
-f028b_sim = 028b
-f031r_sim = 031r
-f033a_sim = 033a
-f033bc_sim = 033bc
-f041_sim = custom, getAllAlphaSubfields(041)
-f041a_sim = 041a
-f041d_sim = 041d
-f043_si = custom, getAllAlphaSubfields(043)
-f045_si = custom, getAllAlphaSubfields(045)
-f046_sim = custom, getAllAlphaSubfields(046)
-f046k_sim = 046k
-f046l_sim = 046l
-f046kl_sim = 046kl
-f047_sim = custom, getAllAlphaSubfields(047)
-f048_sim = custom, getAllAlphaSubfields(048)
-f050_sim = custom, getAllAlphaSubfields(050)
-
-f100_si = custom, getAllAlphaSubfields(100)
-f1004_sim = 1004
-f100e_sim = 100e
-f100f_si = 100f
-f110_si = custom, getAllAlphaSubfields(110)
-f1104_sim = 1104
-f110e_sim = 110e
-f110f_si = 110f
-f111_si = custom, getAllAlphaSubfields(111)
-f1114_sim = 1114
-f111d_si = 111d
-f111e_sim = 111e
-f111f_si = 111f
-f130_si = custom, getAllAlphaSubfields(130)
-f130f_si = 130f
-f130h_si = 130h
-f130l_si = 130l
-f130m_sim = 130m
-f130n_sim = 130n
-f130o_si = 130o
-f130r_si = 130r
-
-f240f_si = 240f
-f240l_si = 240l
-f240m_sim = 240m
-f240n_sim = 240n
-f240o_si = 240o
-f240r_si = 240r
-f245_ssi = custom, getAllAlphaSubfields(245)
-f245a_ssi = 245a
-f245c_si = 245c
-f245h_si = 245h
-f250_sim = custom, getAllAlphaSubfields(250)
-f254_si = custom, getAllAlphaSubfields(254)
-f260a_sim = 260a
-f260b_sim = 260b
-f260c_sim = 260c
-f260e_sim = 260e
-f260f_sim = 260f
-f264a_sim = 264a
-f264b_sim = 264b
-f264c_sim = 264c
-
-f300_sim = custom, getAllAlphaSubfields(300)
-# diff for scores and recordings?
-f300a_sim = 300a
-f300ae_sim = 300ae
-f300b_sim = 300b
-f300bc_sim = 300bc
-f300c_sim = 300c
-f340_sim = custom, getAllAlphaSubfields(340)
-f344_sim = custom, getAllAlphaSubfields(344)
-f344a_sim = 344a
-f345_sim = custom, getAllAlphaSubfields(345)
-f346_sim = custom, getAllAlphaSubfields(346)
-f347_sim = custom, getAllAlphaSubfields(347)
-f347b_sim = 374b
-f348_sim = custom, getAllAlphaSubfields(348)
-f349_sim = custom, getAllAlphaSubfields(349)
-f377_sim = custom, getAllAlphaSubfields(377)
-f380_sim = custom, getAllAlphaSubfields(380)
-f381_sim = custom, getAllAlphaSubfields(381)
-f382_sim = custom, getAllAlphaSubfields(382)
-f383_sim = custom, getAllAlphaSubfields(383)
-f384_si = custom, getAllAlphaSubfields(384)
-f385_sim = custom, getAllAlphaSubfields(385)
-f386_sim = custom, getAllAlphaSubfields(386)
-f387_sim = custom, getAllAlphaSubfields(387)
-f388_sim = custom, getAllAlphaSubfields(388)
-f389_sim = custom, getAllAlphaSubfields(389)
-
-f502d_sim = 502d
-f505a_sim = 505a
-f505t_sim = 505t
-f508_sim = custom, getAllAlphaSubfields(508)
-f511_sim = custom, getAllAlphaSubfields(511)
-f518_sim = custom, getAllAlphaSubfields(518)
-f534_sim = custom, getAllAlphaSubfields(534)
-f546_sim = custom, getAllAlphaSubfields(546)
-f546a_sim = 546a
-f546b_sim = 546b
-
-f600abcdejq_sim = 600abcdejq
-f610abcdgnu_sim = 610abcdgnu
-f611acdefgnpqu_sim = 611acdefgnpqu
-f650_sim = custom, getAllAlphaSubfields(650)
-f650v_sim = 650v
-f650x_sim = 650x
-f650y_sim = 650y
-f650z_sim = 650z
-f655_sim = custom, getAllAlphaSubfields(655)
-
-f700abcdejq_sim = 700abcdejq
-f700klmnoprst_sim = 700klmnoprst
-f7004_sim = 7004
-f700e_sim = 700e
-f700f_sim = 700f
-f700h_sim = 700h
-f700l_sim = 700l
-f700m_sim = 700m
-f700n_sim = 700n
-f700o_sim = 700o
-f700p_sim = 700p
-f700r_sim = 700r
-f710abcdegn_sim = 710abcdegn
-f710klmnoprst_sim = 710klmnoprst
-f7104_sim = 7104
-f710e_sim = 710e
-f710f_sim = 710f
-f710h_sim = 710h
-f710l_sim = 710l
-f710m_sim = 710m
-f710n_sim = 710n
-f710o_sim = 710o
-f710p_sim = 710p
-f710r_sim = 710r
-f711acdefgnpqu_sim = 711acdefgnpqu
-f711klnpst_sim = 711klnpst
-f7114_sim = 7114
-f711d_sim = 711d
-f711f_sim = 711f
-f711h_sim = 711h
-f711l_sim = 711l
-f730_sim = custom, getAllAlphaSubfields(730)
-f730f_sim = 730f
-f730l_sim = 730l
-f730m_sim = 730m
-f730n_sim = 730n
-f730o_sim = 730o
-f730p_sim = 730p
-f730r_sim = 730r
-f740_sim = custom, getAllAlphaSubfields(740)
-f7xxi_sim = 700i:710i:711i:720i:730i:740i:751i:752i:753i:754i:760i:762i:765i:767i:770i:772i:773i:774i:775i:776i:777i:780i:785i:786i:787i
-
-f800abcdejq_sim = 800abcdejq
-f800klmnoprst_sim = 800klmnoprst
-f800f_sim = 800f
-f800n_sim = 800n
-f810abcdgnp_sim = 810abcdgnp
-f810klmnoprst_sim = 810klmnoprst
-f810f_sim = 810f
-f811acdefgnpqu_sim = 811acdefgnpqu
-f811klnpst_sim = 811klnpst
-f811d_sim = 811d
-f811f_sim = 811f
-f830_sim = custom, getAllAlphaSubfields(830)
+f040_sim = 040
+f040b_sim = 040b
