tweak prof_index.properties due to String index out of range error

--- a/profiling/prof_index.properties
+++ b/profiling/prof_index.properties
@@ -1,21 +1,21 @@
 # Marc profiling mappings from MARC data to Solr fields
 
 id = custom, getId
-collection = 'sirsi'
+collection = "sirsi"
 all_search = custom, getAllFields
 
 format = custom, getFormats
 language = custom, getLanguages, language_map.properties
 
 # genre
-f655_ssim = 655
+f655_ssim = custom, getAllAlphaSubfields(655)
 f655a_ssim = 655a
 f655b_ssim = 655b
 f655c_ssim = 655c
 f655abc_ssim = 655abc
 
 # BCE dates
-f046_ssim = 046
+f046_ssim = custom, getAllAlphaSubfields(046)
 f046a_ssim = 046a
 f046b_ssim = 046b 
 f046c_ssim = 046c 
@@ -24,5 +24,5 @@ f046e_ssim = 046e
 
 # language
 f008_35-37_si = 008[35-37]
-f040_sim = 040
+f040_sim = custom, getAllAlphaSubfields(040)
 f040b_sim = 040b
