change Solr url in properties and scripts

--- a/build.properties
+++ b/build.properties
@@ -25,7 +25,7 @@ solrj.lib.dir = ${lib.dir}/solrj-lib
 use.remote.solr = true
 # FIXME: the solr.url should be dealt with as a core or site property, along with other remote props
 # FIXME: how does this relate to site.solr.url below?
-solr.url = http://localhost:8983/solr
+solr.url = http://localhost:8983/solr/profile
 
 # FIXME: can we get rid of verbose and just use log levels?  Or is it used for remote?
 solr.verbose = true
@@ -127,7 +127,7 @@ site.jar.name = ProfilingSolrMarc
 
 # FIXME:  is there any point in keeping port separate?
 site.jetty.port = 8983
-site.solr.url = http://localhost:${site.jetty.port}/solr
+site.solr.url = http://localhost:${site.jetty.port}/solr/profile
 
 #site.data.path = /data/sirsi/latest/updates
 
