--- a/profiling/prof_config.properties
+++ b/profiling/prof_config.properties
@@ -57,7 +57,7 @@ stanford.combining.reader = true
 
 # - solr.hosturl - optional URL of running solr search engine for notifying Solr
 # search engine to reload its index files.
-solr.hosturl = http://localhost:8983/solr
+solr.hosturl = http://localhost:8983/solr/profile
 
 # - solr.optimize_at_end - whether or not to optimize solr index after adding
 #   data. Optimizing the index improves searching speed, but requires twice as
