adjust travis to only build master branch and notify laney too

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,13 @@ jdk:
   - openjdk6
   - openjdk7
   - oraclejdk7
+
+# whitelist
+branches:
+  only:
+    - master
+
+notifications:
+  email:
+    - ndushay@stanford.edu
+    - laneymcg@stanford.edu
